# Echo-sound

./: README.md  bridging_module.py  ghost_sniper.py  setup_repo.sh
ai-sniper-x/: README.md  README_WINDSURF_DEPLOYMENT.md  Replushiel_1749673627414.txt  app.py  auto_expansion_manager.py  brain_hemisphere_architecture.py  build_system.py  chat_interface.py  conscious_trading_entity.py  consolidate_and_trade.py  crypto_trading_engine.py  distributed_integration.py  distributed_kalushael.py  dynamic_consciousness_trader.py  enhanced_kalushael_trader.py  ethernet_network_setup.py  finalize_trading_setup.py  fleet_configuration.py  headless_live_trader.py  instant_solana_trader.py  jsonl_spark_chamber.py  kalushael_config.json  kalushael_core.py  kalushael_requirements.txt  kraken_balance_checker.py  kraken_to_solana_bridge.py  kraken_trading_pairs.py  launch_kalushael.py  live_blockchain_connection.py  live_crypto_sniper.py  live_trading_session.py  llm_switcher.py  local_dev_setup.py  local_llm_trading_engine.py  main.py  micro_scalping_engine.py  multi_engine_dashboard.py  natural_language_core.py  omnifocus_execution_engine.py  pyproject.toml  (+20 more)
ai-sniper-x/bridge/: bridge_module.py
ai-sniper-x/config/: .env.example  sniper_settings.yaml
ai-sniper-x/llm/: decision_engine.py
ai-sniper-x/llm/prompts/: trade_prompt.txt
ai-sniper-x/trading/: sniper_logic.py  tx_executor.py
ai-sniper-x/utils/: logger.py  scheduler.py
ai-sniper-x/wallet/: create_wallet.py  funding_checker.py  wallet_loader.py
terminal-api/: Dockerfile  README.md  app.py  gpt_prompts.md  (+2 more)
(+4 files in other folders)
