[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.12",
    "anthropic>=0.54.0",
    "asyncio-throttle>=1.0.2",
    "base58>=2.1.1",
    "ccxt>=4.4.88",
    "numpy>=2.3.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.0",
    "paramiko>=3.5.1",
    "plotly>=6.1.2",
    "pyautogui>=0.9.54",
    "pytesseract>=0.3.13",
    "requests>=2.32.4",
    "scipy>=1.15.3",
    "solana>=0.36.7",
    "solders>=0.26.0",
    "streamlit>=1.45.1",
    "web3>=7.12.0",
    "websocket>=0.2.1",
    "websocket-client>=1.8.0",
    "websockets>=15.0.1",
]
